--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "file-watcher",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readdirp": "^3.6.0"
+  }
 }
